Stop horizontal scroll (responsive flexbox so shouldnt need it)

--- a/src/components/AppContainer/index.css
+++ b/src/components/AppContainer/index.css
@@ -3,6 +3,8 @@
   justify-content: center;
 
   height: 100vh;
+
+  overflow-x: hidden;
 }
 
 .app {
